     - Fixed an issue where Sqitch would sometimes truncate the registry
       version number fetched from Postgres, most likely because the Perl
       runtime was using 32-bit integers. Fix by casting the version to text
       in the query, before Perl ever see it. Thanks to Malte Legenhausen for
       the report (#343).

0.9996 2017-07-17T18:33:12Z
     - Fixed an error where Oracle sometimes truncated timestamp formats so
       that date parsing failed. Thanks to Johann Wilfling for the report and
       @nmaqsudov for the solution (#316).
     - Added pager configuration, prioritizing the new `core.pager`
       configuration variable over the `$PAGER` environment variable. The new
       `$SQITCH_PAGER` environment variable trumps all. Thanks to Yati Sagade
       for the pull request (#329).
     - Documented the `core.editor` configuration variable.
     - Updated PostgreSQL registry detection to avoid errors when not running
       Sqitch as a superuser and the registry schema already exists. Done by
       looking for the `changes` table in the `pg_tables` view instead of
       looking for the registry schema in the `pg_namespace` catalog table,
       and by using `CREATE SCHEMA IF NOT EXISTS` on PostgreSQL 9.3 and
       higher. Thanks to @djk447 for the pull request (#307).
     - Updated PostgreSQL registry detection to avoid errors when the `psql`
       client is newer than the server version. Sqitch now fetches the version
       from the server instead of parsing it from the client.
     - Removed `no Moo::sification`, to allow modules to be used by Moose
       applications. Replaced with tests to make sure Sqitch itself never uses
       Moose. Thanks to @perigrin for the PR (#332).
     - Specifying a change before a target name on the command-line no longer
       ignores the target (#281).
     - The `--db-*` options are now more consistently applied to a target,
       including when the target is specified as a URI (#293).