@@ -99,12 +99,12 @@ contains lines specify authentication rules as follows:
 
 =item MySQL
 
-For MySQL, if the L<MySQL::Config> module is installed, passwords can be
-specified in the L<F</etc/my.cnf> and
-F<~/.my.cnf> files|http://dev.mysql.com/doc/refman/5.1/en/password-security-user.html#idm139947650158560>.
+For MySQL, if the L<MySQL::Config> module is installed, usernames and
+passwords can be specified in the
+L<F</etc/my.cnf> and F<~/.my.cnf> files|https://dev.mysql.com/doc/refman/5.7/en/password-security-user.html>.
 These files must limit access only to the current user (C<0600>). Sqitch will
-look for a password under the C<[client]> and C<[mysql]> sections, in that
-order.
+look for a username and password under the C<[client]> and C<[mysql]>
+sections, in that order.
 
 =item Oracle
 
